Fixed input element default text alignment.

--- a/src/pages/BreadBlog/NewBlogPost.css
+++ b/src/pages/BreadBlog/NewBlogPost.css
@@ -31,6 +31,7 @@ label {
 }
 
 .publish-panel-input {
+    text-align: start;
     margin-left: 0;
     margin-right: 0;
 }
